--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		    <input type="email" id="email">
 		    <br>
     
-			<p>Gender</p>
+			<label for="gender">Gender</label> 
 			<input type="radio" id="male" name="gender" value="male"> 
 			<label for="male">Male</label> 
 			<input type="radio" id="female" name="gender" value="female"> 
