--- a/main.html
+++ b/main.html
@@ -3,12 +3,12 @@
 <html>
 
 <head>
-	<!-- <link rel="stylesheet" href="styles.css"> -->
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="wrapper">
+	 
 		<form action="">
 			<label for="name">Name</label>
 		    <input type="text" id="name">
@@ -48,7 +48,7 @@
 		</form>
 		 
 		
-	</div>
+	 
     <script type="text/javascript" src="./script.js">
 </script>
 
