--- a/main.html
+++ b/main.html
@@ -18,12 +18,12 @@
 		    <input type="email" id="email">
 		    <br>
     
-			<label for="gender">Gender</label> 
+			<!-- <label for="gender">Gender</label> 
 			<input type="radio" id="male" name="gender" value="male"> 
 			<label for="male">Male</label> 
 			<input type="radio" id="female" name="gender" value="female"> 
 			<label for="female">Female</label> 
-		     <br>
+		     <br> -->
     
 		    <label for="car">Car Brand</label>
 		    <input type="text" id="car">
