--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	 
-		<form action="">
+		<form action="/action_page.php" method="get">
 			<label for="name">Name</label>
 		    <input type="text" id="name">
 		    <br>
