--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
 		    <input type="text" id="password">
 		    <br>
     
-		    <button id="btn" style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">submit❤️button</button>
+		    <button id="btn" style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">submit button</button>
     
 
 
