--- a/main.html
+++ b/main.html
@@ -25,10 +25,10 @@
 			<label for="female">Female</label> 
 		     <br>
     
-		    <!-- <label for="car">Car Brand</label>
+		    <label for="car">Car Brand</label>
 		    <input type="text" id="car">
 		    <br>
-     -->
+    
 		    <label for="age">Age</label>
 		    <input type="text" id="age" required>
 		    <br>
