--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
   <body>
     <!-- the entire body must be written by student -->
 
-    <form action=" " method="get">
+    <form action=" " method="post">
       <label for="name">Name</label>
       <input type="text" id="name" required />
       <br />
@@ -27,9 +27,9 @@
       <!-- <label for="car">Car Brand</label>
       <input type="sel" id="car" />
       <br /> -->
-	  <label for="car Brand">Car Brand</label>
-	  <select name="Car Brand" id="Car Brand">
-		<option value="Car Brand">Car Brand</option>
+	  <label for="cars">Car Brand</label>
+	  <select name="cars" id="cars">
+		<option value="cars">Car Brand</option>
 		<option value="BMW">BMW</option>
 		<option value="Audi">Audi</option>
 	        <option value="Mercedez">Mercedez</option>
