--- a/main.html
+++ b/main.html
@@ -49,6 +49,7 @@
 
       <button
         id="btn"
+		type="submit"
         style="
           font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         "
